syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "CommonModels.proto";


option go_package = "github.com/dudakp/input-server/cmd/session/app/infrastructure";

package session;

service session {
  rpc CreateSession (CreateSessionRequest) returns (Session) {}
  rpc JoinSession (stream JoinSessionRequest) returns (Session) {}
  rpc ListSessions (ListSessionsRequest) returns (stream Session) {}
}

message CreateSessionRequest {
  string name = 1;
  string region = 2;
  string level_id = 3;
}

message JoinSessionRequest {
  oneof event {
    JoinEvent join = 1;
    PingEvent ping = 2;
  }
}

message JoinEvent {
  string session_id = 1;
}

message PingEvent {
  LevelState level_state = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message LevelState {
  string session_id = 1;
  int32 progress = 2;
}

message Session {
  string id = 1;
  string name = 2;
  LevelProjection level = 3;
  int32 numPlayers = 4;
}

message ListSessionsRequest {
  string region = 1;
}
